--- a/src/styles/layouts/_section.scss
+++ b/src/styles/layouts/_section.scss
@@ -15,7 +15,8 @@
     justify-content: flex-start;
     gap: 1.5rem;
     text-align: left;
-    @include respond(tab-port) {
+    // @include respond(tab-port) {
+    @media (max-width: 838px) {
       flex-direction: column;
       align-items: flex-start;
       p {
